Add fade in animation

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -46,3 +46,12 @@ footer {
     }
   }
 }
+
+.fade-in {
+  animation: fade-in .3s;
+}
+
+@keyframes fade-in {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
