--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,6 @@
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_pack_tag 'application', media: 'all'
     %link{href: "https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700", rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css?family=Pacifico", rel: "stylesheet"}
   %body#app-root
     = yield
