Add project image

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -51,6 +51,10 @@ footer {
   animation: fade-in .3s;
 }
 
+.fade-in-fast {
+  animation: fade-in .1s;
+}
+
 @keyframes fade-in {
   from { opacity: 0; }
   to   { opacity: 1; }
