Ignore compiled assets, add stylesheet pack

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = csrf_meta_tags
     = javascript_pack_tag 'application'
     = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_pack_tag 'application'
     %link{href: "https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700", rel: "stylesheet"}
     %link{href: "https://fonts.googleapis.com/css?family=Pacifico", rel: "stylesheet"}
   %body#app-root
