--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,7 @@
     = stylesheet_pack_tag 'application'
     %link{href: "https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700", rel: "stylesheet"}
     %link{href: "https://fonts.googleapis.com/css?family=Pacifico", rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css?family=Ubuntu", rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css?family=Source+Code+Pro", rel: "stylesheet"}
   %body#app-root
     = yield
