Improve styling of auth sites

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -163,7 +163,7 @@ $color: #4170ff;
   }
 
   .ant-progress-bg {
-    background: #2b3556;
+    background: #000;
   }
 
   .ant-progress-status-success .ant-progress-bg {
@@ -171,7 +171,7 @@ $color: #4170ff;
   }
 
   .ant-tag-checkable-checked {
-    background: #2b3556;
+    background: #000;
   }
 
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
