--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,4 +1,3 @@
-@import "base/*";
 @import "variables";
 
 *,
@@ -13,7 +12,6 @@ h1 {
 }
 
 h2 {
-  color: $main-color;
   font-size: 24px;
 }
 
@@ -58,4 +56,10 @@ footer {
 @keyframes fade-in {
   from { opacity: 0; }
   to   { opacity: 1; }
+}
+
+.no-transition {
+  * {
+    transition: none !important;
+  }
 }
