--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,1 +1,8 @@
-$main-color: #568aea;
+:root {
+  --border-color: #d9d9d9;
+  --blue-color: #568aea;
+}
+
+.dark-theme {
+  --border-color: #303030;
+}
