Fix table checkbox position

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -148,4 +148,9 @@
   .ant-progress-success-bg, .ant-progress-bg {
     background: var(--blue-color);
   }
+
+  // Fix checkbox in table header not centered.
+  table tr th.ant-table-selection-column, table tr td.ant-table-selection-column {
+    text-align: center;
+  }
 }
