Fix popover arrow color

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -66,8 +66,7 @@
 
   // Fix arrow color.
   .ant-popover-arrow {
-    border-top-color: #1f1f1f !important;
-    border-left-color: #1f1f1f !important;
+    border-color: #1f1f1f !important;
   }
 
   // Sidebar collapse trigger styling.
