--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,8 +1,10 @@
 :root {
   --border-color: #d9d9d9;
+  --border-color-flashier: #d9d9d9;
   --blue-color: #568aea;
 }
 
 .dark-theme {
   --border-color: #303030;
+  --border-color-flashier: #434343;
 }
