Make table scrollable if it is too big, add min width for language columns

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -209,4 +209,9 @@ $color: #4170ff;
   .ant-table .ant-table .ant-table-container {
     border-top: 0;
   }
+
+  // Make tables scrollable if they are too big to be displayed.
+  .ant-table-content {
+    overflow-x: auto;
+  }
 }
