--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -9,7 +9,7 @@
     background: #fff;
     border-right: 1px solid #f0f0f0;
 
-    :hover {
+    &:hover {
         color: rgb(43, 53, 86);
         background: rgb(232, 239, 255);
     }
