--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -3,6 +3,7 @@
   --border-color-flashier: #d9d9d9;
   --blue-color: #568aea;
   --highlight-color: #000;
+  --topbar-color: #177ddc;
 }
 
 .dark-theme {
