--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -1,6 +1,10 @@
 .dark-theme {
   @import '~antd/dist/antd.dark.less';
 
+  body {
+    color: #fff;
+  }
+
   a {
     color: var(--blue-color-light);
 
@@ -63,7 +67,7 @@
   }
 
   .ant-collapse-borderless > .ant-collapse-item {
-    border-bottom-color: #303030;
+    border-bottom-color: var(--border-color);
   }
 
   // Remove white background of sortable table columns.
@@ -79,19 +83,17 @@
   // Sidebar collapse trigger styling.
   .ant-layout-sider-trigger {
     background: #141414;
-    border-right: 1px solid #303030;
-    border-top: 1px solid #303030;
+    border-right: 1px solid var(--border-color);
 
     &:hover, &:active {
-      background: #1f1f1f;
-      color: #fff;
+      color: var(--blue-color);
     }
   }
 
   .ant-layout-sider-collapsed {
     .ant-layout-sider-trigger {
-      background: #1f1f1f;
-      color: #fff;
+      background: #1c1c1c;
+      color: var(--blue-color);
     }
   }
 
@@ -108,7 +110,7 @@
 
   // Adjus list items separator.
   .ant-list-split .ant-list-item {
-    border-bottom: 1px solid #303030;
+    border-bottom: 1px solid var(--border-color);
 
     &:last-child {
       border-bottom: none;
@@ -119,10 +121,6 @@
   .ant-select-disabled.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
     background: none;
     color: #434343;
-  }
-
-  .ant-tag-checkable-checked {
-    border-color: #fff;
   }
 
   // Fix tree hover and selected elements.
@@ -167,20 +165,6 @@
 
   .ant-input-affix-wrapper:focus, .ant-input-affix-wrapper-focused, .ant-input:focus, .ant-input-focused {
     border-color: var(--blue-color);
-  }
-
-  // Fix button color
-  .ant-btn:hover:not(.ant-btn-dangerous),
-  .ant-btn:focus:not(.ant-btn-dangerous) {
-    color: var(--blue-color);
-    border-color: var(--blue-color);
-  }
-
-  .ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous),
-  .ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous) {
-    color: #fff;
-    background-color: #095cb5;
-    border-color: #095cb5;
   }
 
   // Fix checkbox color
@@ -234,5 +218,22 @@
   .ant-form-item-has-error .ant-input-group-addon,
   .ant-form-item-has-error .ant-input-affix-wrapper:hover {
     border-color: #ff4d4f;
+  }
+
+  .ant-empty-normal {
+    color: rgba(255, 255, 255, 0.7);
+  }
+
+  // Fix slider
+  .ant-slider-track, .ant-slider:hover .ant-slider-track {
+    background: var(--blue-color);
+  }
+
+  .ant-slider-handle {
+    border-color: var(--blue-color) !important;
+  }
+
+  .ant-input {
+    color: #fff;
   }
 }
