--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -146,6 +146,10 @@
   .ant-btn {
     padding-left: 18px;
     padding-right: 18px;
+
+    .ant-btn-loading-icon {
+      margin-right: 8px;
+    }
   }
 
   .ce-block__content {
