--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -5,6 +5,10 @@
     color: #fff;
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    color: #fff;
+  }
+
   a {
     color: var(--blue-color-light);
 
@@ -235,5 +239,36 @@
 
   .ant-input {
     color: #fff;
+  }
+
+  .ant-tag-checkable:not(.ant-tag-checkable-checked):hover {
+    color: #fff;
+  }
+
+  .ant-tag:hover {
+    opacity: 1;
+  }
+
+  .ant-pagination-item-active {
+    border-color: var(--blue-color);
+
+    a {
+      color: var(--blue-color);
+    }
+  }
+
+  .ant-alert-info .ant-alert-icon {
+    color: var(--blue-color);
+  }
+
+  .ant-btn-dangerous {
+    color: #cc3d3f;
+    border-color: #cc3d3f;
+  }
+
+  .ant-btn-dangerous:hover,
+  .ant-btn-dangerous:focus {
+    color: #ff4d4f;
+    border-color: #ff4d4f;
   }
 }
