--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -23,15 +23,14 @@
 
 
 // Fix button color
-.ant-btn:hover:not(.ant-btn-dangerous):not(:disabled),
-.ant-btn:focus:not(.ant-btn-dangerous):not(:disabled) {
+.ant-btn:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+.ant-btn:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
     color: var(--blue-color);
     border-color: var(--blue-color);
 }
 
-.ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous):not(:disabled),
-.ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(:disabled) {
+.ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+.ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
     color: #fff;
-    background-color: #095cb5;
     border-color: #095cb5;
 }
