--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -266,6 +266,17 @@
     border-color: #cc3d3f;
   }
 
+  .ant-btn-dangerous.ant-btn-primary {
+    background: #cc3d3f;
+    color: #fff;
+    border-color: #cc3d3f;
+
+    &:hover {
+      background: #dd4345;
+      border-color: #dd4345;
+    }
+  }
+
   .ant-btn-dangerous:hover,
   .ant-btn-dangerous:focus {
     color: #ff4d4f;
