--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,10 @@
     = javascript_pack_tag 'application'
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_pack_tag 'application'
-    %link{href: "https://fonts.googleapis.com/css?family=Ubuntu", rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap", rel: "stylesheet"}
     %link{href: "https://fonts.googleapis.com/css?family=Source+Code+Pro", rel: "stylesheet"}
+    %link{href: "/favicon-dark-mode.ico", rel: "dark-mode-icon"}
+    %link{href: "/favicon-light-mode.ico", rel: "light-mode-icon"}
+    %link{href: "/favicon-light-mode.ico", rel: "shortcut icon"}
   %body#app-root
     = yield
