--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -3,12 +3,12 @@
   --border-color-flashier: #d9d9d9;
   --blue-color: #568aea;
   --highlight-color: #000;
-  --topbar-color: #177ddc;
+  --topbar-color: rgba(255, 255, 255, 0.25);
 }
 
 .dark-theme {
   --border-color: #303030;
-  --border-color-flashier: #434343;
+  --border-color-flashier: #303030;
   --blue-color: #61b6ff;
   --blue-color-light: #61b6ffbf;
   --highlight-color: rgba(255, 255, 255, 0.85);
