Adapt alert design

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -239,4 +239,12 @@
   .ant-table-content {
     overflow-x: auto;
   }
+
+  .ant-alert {
+    color: #fff;
+
+    p {
+      color: #fff !important;
+    }
+  }
 }
