Fix alert styling

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -286,4 +286,12 @@
     color: #ff4d4f;
     border-color: #ff4d4f;
   }
+
+  .ant-alert {
+    color: #fff;
+
+    p {
+      color: #fff;
+    }
+  }
 }
