--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -17,7 +17,7 @@
 .ant-layout-sider-collapsed {
     .ant-layout-sider-trigger {
         color: var(--blue-color);
-        background: #4170ff26;
+        background: var(--primary-light-color);
     }
 }
 
