--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -3,6 +3,7 @@
 
   body {
     color: #fff;
+    background: var(--dark-color);
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -59,7 +60,7 @@
     background: none;
   }
 
-  .ant-table-thead > tr > th {
+  .ant-table-thead > tr > th, .ant-table-tbody > tr.ant-table-row:hover > td {
     background: rgba(255, 255, 255, 0.05);
   }
 
@@ -274,6 +275,28 @@
     color: var(--blue-color);
   }
 
+
+  // Fix button color
+  .ant-btn:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+  .ant-btn:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
+      color: var(--primary-btn-hover-color);
+      border-color: var(--primary-btn-hover-color);
+  }
+
+  .ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+  .ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+  .ant-tag-checkable-checked:hover {
+      color: #fff;
+      background: var(--primary-btn-hover-color);
+      border-color: var(--primary-btn-hover-color);
+  }
+
+  .ant-btn-primary, .ant-tag-checkable-checked {
+      color: #fff;
+      background: var(--primary-btn-color);
+      border-color: var(--primary-btn-color);
+  }
+
   .ant-btn-dangerous {
     color: #cc3d3f;
     border-color: #cc3d3f;
@@ -314,5 +337,10 @@
 
   .ant-breadcrumb > span:last-child {
     color: #fff;
+  }
+
+  .ant-card {
+    background: var(--background-color);
+    border: 1px solid var(--border-color);
   }
 }
