--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -21,16 +21,23 @@
     }
 }
 
-
 // Fix button color
 .ant-btn:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
 .ant-btn:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
-    color: var(--blue-color);
-    border-color: var(--blue-color);
+    color: var(--primary-btn-hover-color);
+    border-color: var(--primary-btn-hover-color);
 }
 
 .ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
-.ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
+.ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+.ant-tag-checkable-checked:hover {
     color: #fff;
-    border-color: #095cb5;
+    background: var(--primary-btn-hover-color);
+    border-color: var(--primary-btn-hover-color);
+}
+
+.ant-btn-primar, .ant-tag-checkable-checked {
+    color: #fff;
+    background: var(--primary-btn-color);
+    border-color: var(--primary-btn-color);
 }
