--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --dark-color: #0b1013;
+  --dark-color: #080b0d;
   --border-color: #d9d9d9;
   --border-color-flashier: #d9d9d9;
   --blue-color: #568aea;
