--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -36,8 +36,20 @@
     border-color: var(--primary-btn-hover-color);
 }
 
-.ant-btn-primar, .ant-tag-checkable-checked {
+.ant-btn-primary, .ant-tag-checkable-checked {
     color: #fff;
     background: var(--primary-btn-color);
     border-color: var(--primary-btn-color);
+}
+
+.ant-btn.ant-btn-primary.ant-btn-background-ghost {
+    color: var(--primary-btn-color);
+    border-color: var(--primary-btn-color);
+}
+
+.ant-btn.ant-btn-primary.ant-btn-background-ghost:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
+.ant-btn.ant-btn-primary.ant-btn-background-ghost:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
+    color: var(--primary-btn-hover-color);
+    background: var(--primary-btn-hover-color);
+    border-color: var(--primary-btn-hover-color);
 }
