Adapt border color flashier

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,10 +2,9 @@
   --full-color: #000;
   --dark-color: #080b0d;
   --border-color: #d9d9d9;
-  --border-color-flashier: #d9d9d9;
+  --border-color-flashier: #777;
   --blue-color: #568aea;
   --highlight-color: #000;
-  --topbar-color: rgba(255, 255, 255, 0.25);
   --header-background-color: var(--dark-color);
   --primary-light-color: #4170ff26;
   --primary-btn-color: #4576ff;
