--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,24 @@
-<p><%= t(:hello).capitalize %> <%= @resource.email %>!</p>
+<% content_for :title do %>Reset password instructions<% end %>
+<% content_for :preheader do %>Instructions to reset your password<% end %>
 
+<h1><%= t(:hello).capitalize %> <%= @resource.username %>!</h1>
 <p><%= t '.request_reset_link_msg' %></p>
 
-<p><%= link_to t('.password_change_link'), edit_password_url(@resource, reset_password_token: @token, config: message['client-config'].to_s, redirect_url: "#{root_url}new-password").html_safe %></p>
+<table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
+  <tbody>
+    <tr>
+      <td align="left">
+        <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <tbody>
+            <tr>
+              <td><%= link_to t('.password_change_link'), edit_password_url(@resource, reset_password_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url'].to_s).html_safe %></td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 <p><%= t '.ignore_mail_msg' %></p>
 <p><%= t '.no_changes_msg' %></p>
