Fix logo and reset password link in email

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -338,9 +338,7 @@
         <td>&nbsp;</td>
         <td class="container">
           <div class="content">
-            <img src="<%= asset_url("black_logo_with_text.png") %>" alt="Logo" width="239" height="72" border="0" style="margin-bottom: 16px; border:0; outline:none; text-decoration:none; display:block;">
-
-
+            <img src="<%= asset_path("black_logo_with_text.png") %>" alt="Logo" width="179.25" height="54" border="0" style="margin-bottom: 16px; border:0; outline:none; text-decoration:none; display:block;">
             <!-- START CENTERED WHITE CONTAINER -->
             <table role="presentation" class="main">
 
