--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -11,7 +11,7 @@
         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
           <tbody>
             <tr>
-              <td><%= link_to t('.password_change_link'), edit_password_url(@resource, reset_password_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url'].to_s).html_safe %></td>
+              <td><%= link_to t('.password_change_link'), edit_password_url(@resource, reset_password_token: @token, config: message['client-config'].to_s, redirect_url: "#{root_url}new-password").html_safe %></td>
             </tr>
           </tbody>
         </table>
