--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{content: 'text/html; charset=UTF-8', 'http-equiv': 'Content-Type'}
     %title Texterify
     = csrf_meta_tags
+    = javascript_pack_tag 'error_tracking'
     = javascript_pack_tag 'application'
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_pack_tag 'application'
