--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -248,4 +248,17 @@
   .ant-modal-body {
     padding: 16px 24px;
   }
+
+  .ant-statistic {
+    .ant-statistic-content-prefix {
+      margin-right: 16px;
+    }
+
+    &.disabled {
+      .ant-statistic-content {
+        color: rgba(0, 0, 0, 0.45);
+        font-size: 16px;
+      }
+    }
+  }
 }
