--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -259,10 +259,13 @@
       margin-right: 16px;
     }
 
+    .ant-statistic-content {
+      font-size: 16px;
+    }
+
     &.disabled {
       .ant-statistic-content {
         color: rgba(0, 0, 0, 0.45);
-        font-size: 16px;
       }
     }
   }
