Add subscription stuff

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -76,7 +76,12 @@ footer {
     font-weight: 400;
     cursor: pointer;
 
-    &:hover {
+    &[disabled] {
+      background: #999;
+      cursor: default;
+    }
+
+    &:hover:not([disabled]) {
         color: #fff !important;
         background: var(--primary-btn-hover-color);
     }
