--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -223,9 +223,22 @@
     display: flex;
     flex-direction: column;
     border-radius: 4px;
+    border-color: var(--border-color);
+
+    .ant-card-head {
+      border-bottom: 0;
+    }
 
     .ant-card-body {
       flex-grow: 1;
+    }
+
+    .ant-card-grid {
+      box-shadow: 1px 0 0 0 var(--border-color),
+                  0 1px 0 0 var(--border-color),
+                  1px 1px 0 0 var(--border-color),
+                  1px 0 0 0 var(--border-color) inset,
+                  0 1px 0 0 var(--border-color) inset;
     }
   }
 
