Fir dark mode styling of subscription site, uncancel subscription when selecting a new plan

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -342,5 +342,10 @@
   .ant-card {
     background: var(--background-color);
     border: 1px solid var(--border-color);
+    color: var(--full-color);
+
+    .ant-card-head {
+      background: var(--background-color);
+    }
   }
 }
