--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -14,7 +14,7 @@
 .dark-theme {
   --full-color: #fff;
   --background-color: var(--dark-color);
-  --border-color: rgba(255, 255, 255, 0.08);
+  --border-color: rgb(27, 31, 33);
   --border-color-flashier: #4e4e4e;
   --blue-color: #61b6ff;
   --blue-color-light: #61b6ffbf;
