Fix styling issues

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -278,4 +278,15 @@
       }
     }
   }
+
+  // Fix arrows of pagination controls not in the center
+  .ant-pagination {
+    display: flex;
+
+    .ant-pagination-item-link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
