--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -348,4 +348,8 @@
       background: var(--background-color);
     }
   }
+
+  .ant-statistic.disabled .ant-statistic-content {
+    color: rgba(255, 255, 255, 0.25) !important;
+  }
 }
