--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -220,7 +220,7 @@
 
   // Fix select
   .ant-select:not(.ant-select-disabled):hover .ant-select-selector,
-  .ant-select-focused.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+  .ant-select-focused.ant-select-single:not(.ant-select-customize-input):not(.ant-select-disabled) .ant-select-selector {
     border-color: var(--blue-color);
     color: var(--blue-color);
   }
