Add possibility to transfer project

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -135,6 +135,13 @@
     border-bottom: 0;
   }
 
+  // Close icon otherwise not centered.
+  .ant-modal-close-x {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .ant-modal-footer {
     border-top: 0;
   }
