Adapt button color

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -8,8 +8,8 @@
   --highlight-color: #000;
   --header-background-color: var(--dark-color);
   --primary-light-color: #4170ff26;
-  --primary-btn-color: #4576ff;
-  --primary-btn-hover-color: #3768f4;
+  --primary-btn-color: #1c70f5;
+  --primary-btn-hover-color: #327ef6;
 }
 
 .dark-theme {
